add transcode sample

--- a/sample/CMakeLists.txt
+++ b/sample/CMakeLists.txt
@@ -4,3 +4,6 @@ project(sample)
 
 add_executable(sample_video_decode sample_video_decode.cpp)
 target_link_libraries(sample_video_decode ${FFMPEG_LIBRARIES})
+
+add_executable(sample_video_encode sample_video_encode.cpp)
+target_link_libraries(sample_video_encode ${FFMPEG_LIBRARIES})
