--- a/sample/CMakeLists.txt
+++ b/sample/CMakeLists.txt
@@ -7,3 +7,10 @@ target_link_libraries(sample_video_decode ${FFMPEG_LIBRARIES})
 
 add_executable(sample_video_encode sample_video_encode.cpp)
 target_link_libraries(sample_video_encode ${FFMPEG_LIBRARIES})
+
+add_executable(sample_mp4_to_yuvpcm sample_mp4_to_yuvpcm.cpp)
+target_link_libraries(sample_mp4_to_yuvpcm ${FFMPEG_LIBRARIES})
+
+add_executable(decode_video decode_video.c)
+target_link_libraries(decode_video ${FFMPEG_LIBRARIES})
+
