--- a/sample/CMakeLists.txt
+++ b/sample/CMakeLists.txt
@@ -11,3 +11,6 @@ target_link_libraries(sample_video_encode ${FFMPEG_LIBRARIES})
 add_executable(sample_mp4_to_yuvpcm sample_mp4_to_yuvpcm.cpp)
 target_link_libraries(sample_mp4_to_yuvpcm ${FFMPEG_LIBRARIES})
 
+add_executable(sample_yuvpcm_to_mp4 sample_yuvpcm_to_mp4.cpp)
+target_link_libraries(sample_yuvpcm_to_mp4 ${FFMPEG_LIBRARIES})
+
