--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,6 +8,7 @@ include("cmake/ffmpeg.cmake")
 
 include_directories(${CMAKE_SOURCE_DIR}/src)
 include_directories(${CMAKE_SOURCE_DIR}/src/ffmpeg)
+include_directories(${CMAKE_SOURCE_DIR}/src/rtpencoder)
 
 add_executable(av_transcoder main.cpp)
 target_link_libraries(av_transcoder ${FFMPEG_LIBRARIES})
